# safely-dex

./: .travis.yml
assert-owner/: Cargo.toml  README.md
common/: Cargo.toml
common/src/client/: mod.rs
dex/: Anchor.toml  Cargo.toml  README.md
dex/crank/: Cargo.toml
dex/crank/src/: lib.rs  token_instruction.rs
dex/fuzz/: Cargo.toml
dex/fuzz/fuzz_targets/: multiple_orders.rs
dex/fuzz/src/: lib.rs
dex/permissioned/: .#Cargo.toml  Cargo.toml
dex/permissioned/src/: middleware.rs  proxy.rs
dex/src/: fees.rs  instruction.rs  matching.rs  state.rs  tests.rs
dex/tests/permissioned/: Anchor.toml  package.json
dex/tests/permissioned/programs/permissioned-markets/: Cargo.toml
dex/tests/permissioned/programs/permissioned-markets/src/: lib.rs
dex/tests/permissioned/tests/: permissioned-markets.js
dex/tests/permissioned/tests/utils/: common.js  faucet.js  index.js  market-lister.js  market-maker.js  market-proxy.js
pool/: Cargo.toml  README.md
pool/examples/admin-controlled/: Cargo.toml
pool/examples/simple/: Cargo.toml
pool/schema/: Cargo.toml
scripts/travis/: dex-tests.sh
