# Note: This crate must be built using do.sh

[package]
name = "serum_assert_owner"
version = "0.1.0"
repository = "https://github.com/safely-project/serum-dex"
edition = "2018"

[dependencies]
safecoin-program = "1.4.3"

[lib]
crate-type = ["cdylib", "lib"]
name = "serum_assert_owner"

[dev-dependencies]
