[package]
name = "serum-common"
version = "0.1.0"
description = "Serum common utilities"
repository = "https://github.com/safely-project/serum-dex"
edition = "2018"

[features]
program = ["safecoin-sdk/program", "safecoin-program"]
client = ["safecoin-sdk/default", "safecoin-client", "anyhow", "rand", "serde_json", "bs58", "bincode"]
strict = []
devnet = []
default = []


[dependencies]
safe-token = { version = "3.2.2", default-features = true }
arrayref = "0.3.6"
serde = { version = "1.0", features = ["derive"] }
safecoin-sdk = { version = "1.8.12", default-features = false }
serum-borsh = "0.8.1-serum.1"

# Program only.
safecoin-program = { version = "1.8.12", optional = true }

# Client only.
anyhow = { version = "1.0.32", optional = true }
rand = { version = "0.7.3", optional = true }
safecoin-client = { version = "1.8.12", optional = true }
serde_json = { version = "1.0.56", optional = true }
bs58 = { version = "0.3.1", optional = true }
bincode = { version = "1.3.1", optional = true }
