[package]
name = "serum-pool"
version = "0.1.0"
description = "Safecoin pool spec"
edition = "2018"

[features]
program = []
default = []

[dependencies]
serum-pool-schema = { version = "0.1.0", path = "./schema" }
arrayref = "0.3.6"
safecoin-program = {path = "../../Safecoin/sdk/program"}
safe-token = { path = "../../safecoin-program-library/token/program", features = ["no-entrypoint"] }
thiserror = "1.0.20"
zerocopy = "0.3.0"
bytemuck = "1.4.1"
slice-of-array = "0.2.1"
serum-borsh = "0.8.1-serum.1"
anyhow = { version = "1.0.33", default-features = false }
hex = "0.4.2"
base64 = "0.13.0"

[lib]
name = "serum_pool"
crate-type = ["cdylib", "lib"]
