[package]
name = "serum-dex-permissioned"
version = "0.5.1"
edition = "2018"

[dependencies]
safe-anchor-lang = "0.18.2"
safe-anchor-spl = { version = "0.18.2", features = ["dex"] }
serum_dex = { path = "../", features = ["no-entrypoint"] }
safe-token = { version = "3.2.2", features = ["no-entrypoint"] }
