[package]
name = "permissioned-markets"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "permissioned_markets"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
safe-anchor-lang = "0.18.2"
safe-anchor-spl = { version = "0.18.2", features = ["dex"] }
serum_dex = { path = "../../../../" }
serum-dex-permissioned = { path = "../../../../permissioned" }
safecoin-program = "1.8.0"
